--- a/canpi-config/Cargo.toml
+++ b/canpi-config/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "CANPiServer"
+name = "canpi-config"
 version = "0.1.0"
 authors = ["Mark Thornber <mark.thornber@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["canpi-config", "canpi-web-service", "canpi-web-app-ssr"]
-
 [dependencies]
+# Data serialisation library
+serde = { version = "1", features = ["derive"] }
