Json to HashMap working

--- a/canpi-config/static/canpi-config-defn.json
+++ b/canpi-config/static/canpi-config-defn.json
@@ -1,41 +1,33 @@
 {
-  "cbus": [
-    {
-      "attribute": "canid",
+    "canid" : {
       "prompt": "CAN Id",
       "tooltip": "The CAN Id used by the CAN Pi CAP/Zero on the CBUS",
+      "current": "100",
       "default": "100",
       "format": "[0-9]{1,4}",
       "action": "Display"
     },
-    {
-      "attribute": "node_number",
+    "node_number" : {
       "prompt": "Node Number",
       "tooltip": "Module Node Number - change your peril",
+      "current": "4321",
       "default": "4321",
       "format": "[0-9]{1,4}",
       "action": "Display"
     },
-    {
-      "attribute": "start_event_id",
+    "start_event_id" : {
       "prompt": "Start Event Id",
       "tooltip": "The event that will be generated when the ED and GridConnect services start (ON) and stop (OFF)",
+      "current": "1",
       "default": "1",
       "format": "[0-9]{1,2}",
       "action": "Edit"
     },
-    {
-      "attribute":"node_mode",
+    "node_mode" : {
       "prompt": "",
       "tooltip": "",
+      "current": "0",
       "default": "0",
       "action": "Hidden"
     }
-  ],
-  "general": [
-
-  ],
-  "wifi": [
-
-  ]
 }
