--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -14,4 +14,5 @@ actix-rt = "1"
 serde = { version = "1", features = ["derive"] }
 tera = "1.8.0"
 # Other utilities
+bcrypt = "0.10.1"
 chrono = { version = "0.4", features = [ "serde" ] }
