--- a/canpi-config/Cargo.toml
+++ b/canpi-config/Cargo.toml
@@ -11,3 +11,5 @@ edition = "2018"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.72"
 serde_test = "1.0.130"
+# Environment variable access libraries
+dotenv = "0.15.0"
