--- a/canpi-config/Cargo.toml
+++ b/canpi-config/Cargo.toml
@@ -13,3 +13,7 @@ serde_json = "1.0.72"
 serde_test = "1.0.130"
 # Environment variable access libraries
 dotenv = "0.15.0"
+# .ini file library
+rust-ini = "0.17.0"
+# Error handling
+thiserror = "1.0.30"
