--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -9,10 +9,17 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 actix-files = "0.5.0"
-actix-rt = "1"
 # Data serialisation library
 serde = { version = "1", features = ["derive"] }
 tera = "1.8.0"
 # Other utilities
 bcrypt = "0.10.1"
 chrono = { version = "0.4", features = [ "serde" ] }
+hostname = "^0.3"
+thiserror = "1.0.30"
+canpi-config = { path = "../canpi-config" }
+dotenv = "0.15.0"
+rust-ini = "0.17.0"
+
+[dev-dependencies]
+actix-rt = "2.5.0"
