--- a/canpi-config/Cargo.toml
+++ b/canpi-config/Cargo.toml
@@ -14,6 +14,7 @@ serde_test = "1.0.130"
 # Environment variable access libraries
 dotenv = "0.15.0"
 # .ini file library
+#configparser = "3.0.0"
 rust-ini = "0.17.0"
 # Error handling
 thiserror = "1.0.30"
