--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CONFIG_FILE=static/canpi-config-defn.json
 HOST_PORT=127.0.0.1:8080
-INI_FILE=../canpi-config/scratch/canpi.cfg
+INI_FILE=/home/thornbem/CLionProjects/CANPiServer/scratch/example.cfg
