--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -4,20 +4,23 @@ version = "0.1.0"
 authors = ["Mark Thornber <mark.thornber@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "canpi-ssr"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+canpi-config = { git = "https://github.com/emthornber/canpi-config.git", branch = "lgtrunk" }
 actix-web = "3"
 actix-files = "0.5.0"
 # Data serialisation library
 serde = { version = "1", features = ["derive"] }
-tera = "1.8.0"
+tera = "1"
 # Other utilities
 bcrypt = "0.10.1"
 chrono = { version = "0.4", features = [ "serde" ] }
 hostname = "^0.3"
 thiserror = "1.0.30"
-canpi-config = { path = "../canpi-config" }
 dotenv = "0.15.0"
 rust-ini = "0.17.0"
 
