Switch from HashMap to BTreeMap. Added edit page (display only atm).

--- a/canpi-web-app-ssr/static/canpi-config-defn.json
+++ b/canpi-web-app-ssr/static/canpi-config-defn.json
@@ -128,7 +128,7 @@
     "action": "Hide"
   },
   "loglevel": {
-    "prompt": "Set the amount of detail in the log file",
+    "prompt": "Log File Level",
     "tooltip": "Levels are INFO, WARN, DEBUG in increasing verboseness",
     "current": "INFO",
     "default": "INFO",
