--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "canpi-web-app-ssr"
+name = "canpi-ssr"
 version = "0.1.0"
 authors = ["Mark Thornber <mark.thornber@gmail.com>"]
 edition = "2018"
-
-[[bin]]
-name = "canpi-ssr"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,3 +23,4 @@ rust-ini = "0.17.0"
 
 [dev-dependencies]
 actix-rt = "2.5.0"
+cargo-deb = "1.39.3"
