--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -20,6 +20,7 @@ hostname = "^0.3"
 thiserror = "1.0.30"
 dotenv = "0.15.0"
 rust-ini = "0.17.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 actix-rt = "2.5.0"
