Updated canpi configuration behaviour. Added EDIT buttons to DISPLY page. EDIT page only updates a single attribute Added a SAVE menu item to update canpi cfg file.

--- a/scratch/canpi_example.cfg
+++ b/scratch/canpi_example.cfg
@@ -1,23 +1,23 @@
-canid=100
-router_ssid="home"
-service_name="MyLayout"
-cangrid_port=5550
-candevice="can0"
-tcpport=5555
-create_log_file="True"
-can_grid="True"
-start_event_id=1
-green_led_pin=24
-turnout_file="turnout.txt"
-node_number=300
-fn_momentary="2"
-yellow_led_pin=23
-router_password="passwd"
-logfile="canpi.log"
-loglevel="INFO"
-logappend="false"
-button_pin=17
-node_mode=0
+logappend=false
+router_ssid=home
 red_led_pin=22
-edserver="true"
+router_password=passwd
+turnout_file=turnout.txt
+start_event_id=1
+edserver=true
 orphan_timeout=30
+node_mode=0
+node_number=300
+can_grid=True
+service_name=MyLayout
+cangrid_port=5550
+fn_momentary=2
+button_pin=17
+green_led_pin=24
+logfile=canpi.log
+tcpport=5555
+yellow_led_pin=23
+canid=100
+create_log_file=True
+candevice=can0
+loglevel=WARN
