--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -21,6 +21,7 @@ thiserror = "1.0.30"
 dotenv = "0.15.0"
 rust-ini = "0.17.0"
 lazy_static = "1.4.0"
+futures-util = "0.3.28"
 
 [dev-dependencies]
 actix-rt = "2.5.0"
