Updated AUTOHS behaviour to match CANPI. Moved common text into BASE template. Moved name of edited attribute into models.rs.

--- a/scratch/canpi_example.cfg
+++ b/scratch/canpi_example.cfg
@@ -1,23 +1,23 @@
-logappend=false
+cangrid_port=5550
+loglevel=INFO
+candevice=can0
+edserver=true
+button_pin=17
+can_grid=True
+node_mode=0
+canid=100
 router_ssid=home
+node_number=300
+green_led_pin=24
+logappend=false
+start_event_id=1
 red_led_pin=22
 router_password=passwd
-turnout_file=turnout.txt
-start_event_id=1
-edserver=true
-orphan_timeout=30
-node_mode=0
-node_number=300
-can_grid=True
-service_name=MyLayout
-cangrid_port=5550
-fn_momentary=2
-button_pin=17
-green_led_pin=24
 logfile=canpi.log
 tcpport=5555
+turnout_file=turnout.txt
+orphan_timeout=30
 yellow_led_pin=23
-canid=100
+fn_momentary=2
 create_log_file=True
-candevice=can0
-loglevel=WARN
+service_name=MyLayout
