--- a/scratch/autohs_example.cfg
+++ b/scratch/autohs_example.cfg
@@ -1,4 +1,4 @@
-ap_ssid="canpiwi"
-ap_password="12345678"
 ap_channel=6
-ap_network="192.168.45.1"
+ap_network=192.168.45.1
+ap_ssid=canpiwi
+ap_password=12345678
