Move validation of configuration into separate module.

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-CONFIG_FILE=static/canpi-config-defn.json
+# canpi-config definitions
+DEF_FILE=canpi-config/tests/good-example-config-defn.json
+CFG_FILE=canpi-config/scratch/example.cfg
+# canpi-web-app-ssr defintions
+CPS_HOME=/home/thornbem/CLionProjects/CANPiServer
 HOST_PORT=0.0.0.0:8080
-AUTOHS_INI_FILE=/home/thornbem/CLionProjects/CANPiServer/scratch/autohs_example.cfg
-CANPI_INI_FILE=/home/thornbem/CLionProjects/CANPiServer/scratch/canpi_example.cfg
+AUTOHS_INI_FILE=${CPS_HOME}/scratch/autohs_example.cfg
+CANPI_INI_FILE=${CPS_HOME}/scratch/canpi_example.cfg
