--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["canpi-web-service", "canpi-web-app-ssr"]
+members = ["canpi-config", "canpi-web-service", "canpi-web-app-ssr"]
 
 [dependencies]
