--- a/canpi-web-app-ssr/Cargo.toml
+++ b/canpi-web-app-ssr/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "canpi-ssr"
+name = "canpi-web-app-ssr"
 version = "0.1.0"
 authors = ["Mark Thornber <mark.thornber@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-canpi-config = { git = "https://github.com/emthornber/canpi-config.git", branch = "lgtrunk" }
+#canpi-config = { git = "https://github.com/emthornber/canpi-config.git", branch = "lgtrunk" }
+canpi-config = { path = "../canpi-config" }
 actix-web = "3"
 actix-files = "0.5.0"
 # Data serialisation library
